syntax = "proto3";
package services;
message UserRequest{
  int32 currentPage = 1;
  int32 pageSize = 2;
  string search = 3;
  string method = 4;
}

message UserResponse{
  // @inject_tag: gorm:"column:id"
  int32 uid = 1;
  // @inject_tag: gorm:"column:name"
  string username = 2;
}

message UserResponseList{
  repeated UserResponse users = 1;
  int32 total = 2;
}

service UserService{
  rpc GetUserList(UserRequest) returns(UserResponseList);
}